# EdoEngine-CPP

./: LICENSE
EdoCore/: CMakeLists.txt
EdoCore/src/: Edo.h  EdoBase.h  EdoIncludes.h  EdoMacros.h  library.h
EdoCore/src/Types/: EdoString.cpp  EdoString.h
EdoCore/src/Utils/: EdoTextLog.cpp  EdoTextLog.h
